Crear el proyecto, instalacion de taildwind y desarrollo de routeo de las vistas con angular

--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "patrullaje-serenazgo-desktop",
   "version": "0.0.0",
+  "main": "electron/main.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "electron": "ng build && electron .",
+    "electron:build": "ng build && electron .",
+    "electron-dev": "electron .",
+    "electron:dev": "ng build --watch & electron ."
   },
   "private": true,
   "dependencies": {
@@ -18,7 +23,11 @@
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
+    "@tailwindcss/postcss": "^4.1.4",
+    "patrullaje-serenazgo-desktop": "file:",
+    "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.1.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -27,6 +36,7 @@
     "@angular/cli": "^19.1.5",
     "@angular/compiler-cli": "^19.1.0",
     "@types/jasmine": "~5.1.0",
+    "electron": "^35.2.0",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
