modificacion completa del template

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@tailwindcss/postcss": "^4.1.4",
+    "daisyui": "^5.0.37",
+    "ngx-socket-io": "^4.8.5",
     "patrullaje-serenazgo-desktop": "file:",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
@@ -35,6 +37,8 @@
     "@angular-devkit/build-angular": "^19.1.5",
     "@angular/cli": "^19.1.5",
     "@angular/compiler-cli": "^19.1.0",
+    "@types/google.maps": "^3.58.1",
+    "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~5.1.0",
     "electron": "^35.2.0",
     "jasmine-core": "~5.5.0",
