--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.0.0",
   "main": "electron/main.js",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
+    "ng": "cd src && ng serve",
+    "start": "concurrently \"npm run ng\" \"wait-on http://localhost:4200 && npm run electron\"",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "electron": "ng build && electron .",
     "electron:build": "ng build && electron .",
-    "electron-dev": "electron .",
+    "electron-dev": "electron electron/main.js",
     "electron:dev": "ng build --watch & electron ."
   },
   "private": true,
@@ -23,8 +23,11 @@
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
+    "@auth0/angular-jwt": "^5.2.0",
     "@tailwindcss/postcss": "^4.1.4",
     "daisyui": "^5.0.37",
+    "dotenv": "^16.5.0",
+    "izitoast": "^1.4.0",
     "ngx-socket-io": "^4.8.5",
     "patrullaje-serenazgo-desktop": "file:",
     "postcss": "^8.5.3",
@@ -40,13 +43,16 @@
     "@types/google.maps": "^3.58.1",
     "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~5.1.0",
+    "concurrently": "^9.1.2",
     "electron": "^35.2.0",
+    "electron-reload": "^2.0.0-alpha.1",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.7.2"
+    "typescript": "~5.7.2",
+    "wait-on": "^8.0.3"
   }
 }
